2025-04-27  G. Branden Robinson <g.branden.robinson@gmail.com>

	* rfc1345.tmac: Add Vim 9.1.1065 digraph `.=` for U+2250
	"APPROACHES THE LIMIT".
	* groff_rfc1345.7.man: Document it.

2023-10-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* rfc1345.tmac: Fix copy-and-paste errors.  Annotate which
	version of Vim introduced the ",." digraph.

2023-10-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* rfc1345.tmac: Add Vim digraphs W`, w`, Y`, y`, oo, 4', and =e.

2021-02-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	Add smoke test.

	* tests/rfc1345-smoke-test.sh: Add test.
	* rfc1345.am (rfc1345_TESTS, TESTS, EXTRA_DIST): Run test.

2021-02-02  G. Branden Robinson <g.branden.robinson@gmail.com>

	Integrate rfc1345.tmac into build system.

	* rfc1345.am: Do it.

2021-02-02  Dorai Sitaram <ds26gte@yahoo.com>

	* COPYRIGHT:
	* groff_rfc1345.7.man:
	* rfc1345.tmac: Add new macro package.

	Fixes <https://savannah.gnu.org/bugs/?59839>.